--- a/HTML,CSS responsive/index.html
+++ b/HTML,CSS responsive/index.html
@@ -9,13 +9,13 @@
 <link rel="stylesheet" href="style.css">
 
 <body>
-    <nav class="navbar background h-nav-resp">
+    <nav class="navbar background h-nav-resp" >
 
         <ul class="nav-list v-class-resp">
-            <li ><a href="home"> Home</a></li>
-            <li ><a href="home"> About</a></li>
-            <li ><a href="home"> Service</a></li>
-            <li ><a href="home"> Contacts</a></li>
+            <li ><a href="#home"> Home</a></li>
+            <li ><a href="#about"> About</a></li>
+            <li ><a href="#service"> Service</a></li>
+            <li ><a href="#contact"> Contacts</a></li>
         </ul>
 
         <div class="rightnav v-class-resp">
@@ -33,7 +33,7 @@
     </nav>
 
 
-    <section class="background firstSection">
+    <section class="background firstSection" id="home">
         <div class="box-main">
                 
                 <p class="text-big">The future of Education is Here!!!</p>
@@ -47,7 +47,7 @@
         </div>
     </section>
 
-    <section class="secRight1">
+    <section class="secRight1" id="service">
 
         <div class="Text1">
             <p class="secTag1">UNSCO</p>
@@ -103,7 +103,7 @@
             </div>
     </section>
 
-    <section class="background footer">
+    <section class="background footer" id="contact">
         <p class="contact">Contact Us</p>
         
         <input type="text" name="search" placeholder="name" id="name">
